<resources>
    <string name="app_name">Quattus</string>
    <string name="new_account">New Account</string>
    <string name="welcome">Welcome To Quattus</string>
    <string name="register">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_label">E-mail</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="main_logout">Logout</string>
    <string name="main_account_setting">Account Settings</string>
    <string name="register_create_new_account">Create New Account</string>
    <string name="register_toolbar">Create Account</string>
    <string name="register_sign_up_btn">Sign in</string>
    <string name="sign_in">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="pro_diag_login">Login In</string>
    <string name="pro_diag_registration">User Registration</string>
    <string name="pro_diag_registration_message">Registring User</string>
    <string name="pro_diag_dbadd_message">Adding User To Databases</string>
    <string name="login_error_toast">Error Logging In ! Please Check Email And Password And Try Again</string>
    <string name="registration_error_toast">Error Creating User ! Please Check The Fields And Try Again </string>
    <string name="login_success_toast">Login Successfull! </string>
    <string name="register_success_toast">User Registred Successfully! </string>
    <string name="tab_chat">Chat</string>
    <string name="tab_request">Requests</string>
    <string name="tab_friends">Friends</string>
    <string name="account_change_name">Change Name</string>
    <string name="account_change_status">Change Status</string>
    <string name="account_change_image">Change Image</string>
    <string name="null_user_error_toast">No User is Active ! Please Log In Or Sign Up</string>
    <string name="database_users">Users</string>
    <string name="database_uid">Uid</string>
    <string name="database_username">username</string>
    <string name="database_status">status</string>
    <string name="database_status_value">Hi I\'m Using Quattus !</string>
    <string name="database_image">Image</string>
    <string name="database_image_thmb">Image_Thmb</string>
    <string name="database_image_value">dfault</string>
    <string name="database_image_thmb_value">default</string>
    <string name="account_status">Status</string>
    <string name="account_username">Username</string>
    <string name="status_toolbar">Change Status</string>
    <string name="status">Status</string>
    <string name="pro_diag_status_change">Changing Status</string>
    <string name="status_change_error_toast">Error While Changing Status !</string>
    <string name="status_value">status_value</string>
    <string name="setting_toolbar">Settings</string>
    <string name="image">image/*</string>
    <string name="select_image">Select Image</string>
    <string name="user_single_username">Username</string>
    <string name="user_single_status">Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_path">profile_images</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="uploading_image_wait">Please Wiat While Image Is Uploading !</string>
    <string name="users_toolbar">All Users</string>
    <string name="storage_path_thumb">thumbs</string>
    <string name="user_id">user_id</string>
    <string name="pro_diag_load_user_message">Please Wait Loading User Data</string>
    <string name="pro_diag_user">Loading User Data</string>
    <string name="decline_request">Decline Friend Request</string>
    <string name="database_friends_request">Friend_Request</string>
    <string name="database_request_type">Request_Type</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="database_friends">Friends</string>
    <string name="friends">Friends</string>
    <string name="unfriends">Unfriend</string>


</resources>
