<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_profile_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:paddingLeft="0sp"
        android:paddingRight="0sp"
        android:scaleType="fitXY"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="308dp"
        android:text="@string/account_username"
        android:textColor="@color/color_welcome_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="256dp"
        android:text="@string/account_status"
        android:textColor="@color/color_welcome_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_total_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:text="@string/total_friends"
        android:textColor="@color/color_welcome_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/friend_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/send_friend_request"
        android:textColor="@color/color_button" />

    <Button
        android:id="@+id/decline_friend_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/decline_request"
        android:textColor="@color/color_button" />
</RelativeLayout>