<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingActivity">



    <include layout="@layout/app_bar_layout"
        android:id="@+id/setting_toolbar"  ></include>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/account_username"
        android:textColor="@color/color_welcome_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/account_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="379dp"
        android:text="@string/account_status"
        android:textColor="@color/color_welcome_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/account_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/account_change_name"
        android:textColor="@color/color_button" />

    <Button
        android:id="@+id/account_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/account_change_name"
        android:layout_alignLeft="@+id/account_change_name"
        android:layout_alignEnd="@+id/account_change_name"
        android:layout_alignRight="@+id/account_change_name"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-9dp"
        android:layout_marginLeft="-9dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginRight="-8dp"
        android:layout_marginBottom="101dp"
        android:background="@color/colorAccent"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/account_change_status"
        android:textColor="@color/color_button" />

    <Button
        android:id="@+id/account_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/account_change_name"
        android:layout_alignLeft="@+id/account_change_name"
        android:layout_alignEnd="@+id/account_change_name"
        android:layout_alignRight="@+id/account_change_name"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-12dp"
        android:layout_marginLeft="-12dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginRight="-12dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/account_change_image"
        android:textColor="@color/color_button" />


</RelativeLayout>









