<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="413dp"
        android:text="@string/welcome"
        android:textColor="@color/color_welcome_text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/register_sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_sign_in_btn"
        android:layout_alignLeft="@+id/register_sign_in_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="181dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/register"
        android:textColor="@color/color_welcome_text" />

    <Button
        android:id="@+id/register_sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="252dp"
        android:background="@color/colorAccent"
        android:text="@string/register_sign_up_btn"
        android:textColor="@color/color_button" />
</RelativeLayout>